# generators

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
include/: gen.h
src/: main.cpp
test/: gen_test.cpp
